addition of a facebook review

--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
 
 
 
-                    <div class="col-lg-6 col-sm-6 wow fadeInRight animated"
-                    data-wow-animation-name="none">
+                    <div class="col-lg-6 col-sm-6 wow fadeInRight animated"data-wow-animation-name="none">
+                    
                         <h1>Our Smart Product5s</h1>
                         <hr>
 
@@ -190,12 +190,8 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="aligncenter">
-                            <h2 class="aligncenter">Our Services</h2>Lorem
-                            ipsum dolor sit amet, consectetur adipisicing elit.
-                            Dolores quae porro consequatur aliquam, incidunt
-                            eius magni provident, doloribus omnis minus
-                            ovident, doloribus omnis minus temporibus
-                            perferendis nesciunt..
+                            <h2 class="aligncenter">Reviews</h2>
+                            Below are some of our reviews
                         </div><br>
                     </div>
                 </div>
@@ -204,16 +200,10 @@
                     <div class="skill-home">
                         <div class="skill-home-solid clearfix">
                             <div class="col-md-3 text-center">
-                                <span class="icons c1 fa fa-trophy" style=
-                                "font-style: italic"></span>
+                                <span class="fab fa-facebook-f"></span>
 
                                 <div class="box-area">
-                                    <h3>Web Development</h3>
-
-                                    <p>Lorem ipsum dolor sitamet, consec tetur
-                                    adipisicing elit. Dolores quae porro
-                                    consequatur aliquam, incidunt eius magni
-                                    provident</p>
+                                    <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fd.dee.0718%2Fposts%2Fpfbid02zG4ApFe7UvxWdCcMvtasrxiL3jnXmDd3V4BVqD7q8LbLsqkokNy6waAjttyXay2zl&show_text=true&width=500" width="200" height="188" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
                                 </div>
                             </div>
 
