update to services section of website

--- a/index.html
+++ b/index.html
@@ -273,43 +273,59 @@
             </div>
           <div class='wrapper'>
             <div class='services'>
+
+
+
               <div class='service-item'>
                 <span class="fa-stack fa-4x">
-                  <i class="fa fa-circle-thin fa-stack-2x" style='color:#74ebd5
-          '></i>
+                  <i class="fa fa-circle-thin fa-stack-2x" style='color:#74ebd5'></i>
                   <i class="fas fa-home fa-stack-1x"></i>
                 </span>
-                <h2>Design</h2>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut a elementum lectus. Nulla dignissim non purus in dapibus. Ut posuere tellus tortor, fermentum vehicula odio iaculis ac. Quisque at vestibulum lectus. Etiam mollis gravida ultricies. Nam nisi
-                  ex, bibendum id nisi ac, congue blandit mauris. Donec et interdum leo, eu rutrum nunc.
-                </p>
+
+                <h2>House Washing</h2>
+                
+                <img alt="" src="img\Before.jpg"> 
+
                 <button>Find Out More</button>
               </div>
+
+
+
+
               <div class='service-item'>
                 <span class="fa-stack fa-4x">
-                  <i class="fa fa-circle-thin fa-stack-2x" style='color:#74ebd5
-          '></i>
-                  <i class="fa-thin fa-fence fa-stack-1x"></i>
+                  <i class="fa fa-circle-thin fa-stack-2x" style='color:#74ebd5'></i>
+                  <i class="fas fa-warehouse fa-stack-1x"></i>
                 </span>
-                <h2>Development</h2>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut a elementum lectus. Nulla dignissim non purus in dapibus. Ut posuere tellus tortor, fermentum vehicula odio iaculis ac. Quisque at vestibulum lectus. Etiam mollis gravida ultricies. Nam nisi
-                  ex, bibendum id nisi ac, congue blandit mauris. Donec et interdum leo, eu rutrum nunc.
-                </p>
+                <h2>Roof Washing</h2>
+
+                <img alt="" src="img\roof.jpg"> 
+
+                <button>Find Out More</button>
+
+              </div>
+
+
+              <div class='service-item'>
+                <span class="fa-stack fa-4x">
+                  <i class="fa fa-circle-thin fa-stack-2x" style='color:#74ebd5'></i>
+                  <i class="fas fa-bars fa-rotate-90  fa-stack-1x"></i>
+                </span>
+                <h2>Fence</h2>
+
+                <img alt="" src="img\fence.jpg" > 
+
                 <button>Find Out More</button>
               </div>
+
+
               <div class='service-item'>
                 <span class="fa-stack fa-4x">
-                  <i class="fa fa-circle-thin fa-stack-2x" style='color:#74ebd5
-          '></i>
-                  <i class="fa fa-user fa-stack-1x"></i>
+                  <i class="fa fa-circle-thin fa-stack-2x" style='color:#74ebd5'></i>
+                  <i class="fas fa-road fa-stack-1x"></i>
                 </span>
-                <h2>UX</h2>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut a elementum lectus. Nulla dignissim non purus in dapibus. Ut posuere tellus tortor, fermentum vehicula odio iaculis ac. Quisque at vestibulum lectus. Etiam mollis gravida ultricies. Nam nisi
-                  ex, bibendum id nisi ac, congue blandit mauris. Donec et interdum leo, eu rutrum nunc.
-                </p>
+                <h2>Concrete Washing</h2>
+                   <img alt="" src="img\concrete.jpg"> 
                 <button>Find Out More</button>
               </div>
             </div>
