meta change at the top of the page

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta charset="utf-8">
 
     <title>Clean Slate Pressure Washing Services Website</title>
-    <gallery-eta content="width=device-width, initial-scale=1.0">
+    <meta name = "viewport" content="width=device-width, initial-scale=1">
     <meta name="keyworgallery-ds" content="Clean Slate Pressure Washing Services, Clean Slate Pressure Washing, Pressure Washing in St. Charles Area, Pressure Washing in New Orleans Area, Pressure Washing Near Me " />
     <meta name="descriptigallery-on" content="Clean Slate Pressure Washing Services" />
-    <mgallery-eta content="" name="description">
+    <meta content="" name="description">
    
 
 
