added another picture to image gallery

--- a/index.html
+++ b/index.html
@@ -363,8 +363,8 @@
             <div class="gallery-item">
                 <label>
                     <input class="image-toggler" type="checkbox">
-                    <img class="thumbnail" src="img\driveway-before.jpg">
-                    <img class="full" src="img\driveway-after.jpg" loading="lazy">
+                    <img class="thumbnail" src="img\fence-before.jpg">
+                    <img class="full" src="img\fence-after.jpg" loading="lazy">
                   </label>
             </div>
     
