added link picture

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 
 <head>
     <meta charset="utf-8">
-
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta property="og:image" content="img\cleanslatelogo.jpg" />
     <title>Clean Slate Pressure Washing Services Website</title>
     <meta name = "viewport" content="width=device-width, initial-scale=1">
     <meta name="keyworgallery-ds" content="Clean Slate Pressure Washing Services, Clean Slate Pressure Washing, Pressure Washing in St. Charles Area, Pressure Washing in New Orleans Area, Pressure Washing Near Me " />
     <meta name="descriptigallery-on" content="Clean Slate Pressure Washing Services" />
-    <meta content="" name="description">
+   
    
 
 
