renaming of Javascript file

--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
     <script src="js/portfolio/jquery.quicksand.js"></script> 
     <script src="js/portfolio/setting.js"></script>  
    
-    
-    <script src="js\custom.js"></script>
+    <script src="js\script.js"></script>
+   
 </body>
 </html>
