--- a/services.html
+++ b/services.html
@@ -16,7 +16,7 @@
 
 </head>
 <body>
-<div id="wrapper">
+<div id="services wrapper">
 
 	<!-- start header -->
 		<header>
@@ -57,13 +57,6 @@
 
 
 
-
-        <!-- Service Blcoks -->
-		<div class="row mar-b-50">
-        <div class="col-lg-5">
-          <div class="about-carousel wow fadeInLeft animated" data-wow-animation-name="none" style="visibility: visible; -webkit-animation-name: none;">
-            <div id="myCarousel" class="carousel slide">
-              <!-- Carousel items -->
 
 
 
