--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <section class="hero-text">
             <div class="container">
             
-                    
+                    <h3>About Us</h3>
 
                         <p><i class="fa fa-check fa-lg pr-10"></i> Clean slate Pressure Washing LLC is located in South Louisiana and specializes in cleaning up your property. We can clean Residential and Commercial Homes 
                         <hr>
