chnaged the about us paragrah

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             
                     <h3>About Us</h3>
 
-                        <p><i class="fa fa-check fa-lg pr-10"></i> Clean slate Pressure Washing LLC is located in South Louisiana and specializes in cleaning up your property. We can clean Residential and Commercial Homes 
+                        <p><i class="fa fa-check fa-lg pr-10"></i> Clean slate Pressure Washing LLC is located in South Louisiana and specializes in cleaning up your property. At Clean Slate you will receive a quality experience. We at Clean Slate take care of all your power washing needs including house, deck, patio, soft wash roof and sidewalks. Clean Slate will make you proud to call your house a home.
                         <hr>
                     
                         <div class="rounded-social-buttons">
@@ -411,7 +411,7 @@
         <div class="container">
             <div class="footer-cta pt-5 pb-5">
                 <div class="row">
-                    <div class="col-xl-4 col-md-4 mb-30">
+                    <di class="col-xl-4 col-md-4 mb-30">
                         <div class="single-cta">
                             <i class="fas fa-map-marker-alt"></i>
                             <div class="cta-text">
@@ -420,7 +420,8 @@
                                     View map</a>
                             </div>
                         </div>
-                    </div>
+                    </di
+                    v>
                     <div class="col-xl-4 col-md-4 mb-30">
                         <div class="single-cta">
                             <i class="fas fa-phone"></i>
