updated services page

--- a/services.html
+++ b/services.html
@@ -104,9 +104,9 @@
         <div class="service-icon">
           <i class="fas fa-paint-brush"></i>
         </div>
-        <div class="service-title">Web Designs</div>
+        <div class="service-title">Power/Pressure/Soft Washing</div>
         <div class="service-desc">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et eaque ratione rem porro, nihil.
+          We can provide Power, Pressure, or Soft Washing to your Home or Business!
         </div>
       </div>
 
@@ -114,9 +114,9 @@
         <div class="service-icon">
           <i class="fas fa-code"></i>
         </div>
-        <div class="service-title">Web Development</div>
+        <div class="service-title">Residential house Washing</div>
         <div class="service-desc">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et eaque ratione rem porro, nihil.
+          We can clean your Roof, Windows(interior and exterior), Rooftop Skylight, also clean your gutters!
         </div>
       </div>
 
@@ -124,9 +124,39 @@
         <div class="service-icon">
           <i class="fas fa-brush"></i>
         </div>
-        <div class="service-title">Responsive Designs</div>
+        <div class="service-title">Concrete Cleaning</div>
         <div class="service-desc">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et eaque ratione rem porro, nihil.
+          We can get all that dirt washed away from your conrete driveway, sidewalk, or parking lot from your Home or Business!
+        </div>
+      </div>
+
+      <div class="service-box">
+        <div class="service-icon">
+          <i class="fas fa-brush"></i>
+        </div>
+        <div class="service-title">Pool Deck Cleaning</div>
+        <div class="service-desc">
+          WE can get your deck cleaned up to enjoy all Summer Long!
+        </div>
+      </div>
+
+      <div class="service-box">
+        <div class="service-icon">
+          <i class="fas fa-brush"></i>
+        </div>
+        <div class="service-title">Fence Washing</div>
+        <div class="service-desc">
+          We can get your fence looking like new again!
+        </div>
+      </div>
+
+      <div class="service-box">
+        <div class="service-icon">
+          <i class="fas fa-brush"></i>
+        </div>
+        <div class="service-title">Oil Stain Removal</div>
+        <div class="service-desc">
+          We can get that ugly oil stain washed away!
         </div>
       </div>
 
@@ -134,30 +164,12 @@
         <div class="service-icon">
           <i class="fas fa-object-ungroup"></i>
         </div>
-        <div class="service-title">Edit Sections</div>
+        <div class="service-title">Dumpster Cleaning</div>
         <div class="service-desc">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et eaque ratione rem porro, nihil.
+         We can get your dumpster and Dumpster pad cleaned up for you!
         </div>
       </div>
 
-      <div class="service-box">
-        <div class="service-icon">
-          <i class="fas fa-database"></i>
-        </div>
-        <div class="service-title">Databases</div>
-        <div class="service-desc">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et eaque ratione rem porro, nihil.
-        </div>
-      </div>
-
-      <div class="service-box">
-        <div class="service-icon">
-          <i class="fab fa-android"></i>
-        </div>
-        <div class="service-title">Android</div>
-        <div class="service-desc">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et eaque ratione rem porro, nihil.
-        </div>
       </div>
     </div>
   </div>
