--- a/index.html
+++ b/index.html
@@ -124,6 +124,11 @@
             <div class="banner-image">
          <img src="img\cleanslatelogo_Scaled500px.png"/>
         </div>
+
+
+
+
+
         </section>
 
 
@@ -136,7 +141,15 @@
 
                         <p><i class="fa fa-check fa-lg pr-10"></i> Clean slate Pressure Washing LLC is located in South Louisiana and specializes in cleaning up your property. At Clean Slate you will receive a quality experience. We at Clean Slate take care of all your power washing needs including house, deck, patio, soft wash roof and sidewalks. Clean Slate will make you proud to call your house a home.
                         <hr>
-                    
+
+                            <h3>Click Below to see our reviews and connect with us!</h3>
+                        <div class="review-buttons">
+                        <a href="https://www.google.com/localservices/prolist?spp=Cg0vZy8xMWtwdmRfcngx&scp=CgAaJUNsZWFuIFNsYXRlIFByZXNzdXJlIFdhc2hpbmcgU2VydmljZXMqJUNsZWFuIFNsYXRlIFByZXNzdXJlIFdhc2hpbmcgU2VydmljZXM%3D&q=Clean+Slate+Pressure+Washing+Services&src=2&slp=UhUIARIREg8iDS9nLzExa3B2ZF9yeDE" target="_blank"><img src="img\5stargoogle.png" width="100" height="50" alt="Photo of resort in Boracay, Philippines" style="border-radius: 1rem;" /></a>
+                        <a href="https://www.yelp.com/biz/clean-slate-pressure-washing-services-des-allemands?osq=Pressure+Washing&override_cta=Request+a+Quote" target="_blank"><img src="img\yelpreview.png" width="100" height="50" alt="Photo of resort in Boracay, Philippines" style="border-radius: 1rem;" /></a>
+
+                    </div>
+
+
                         <div class="rounded-social-buttons">
                             <a class="social-button facebook" href="https://www.facebook.com/CleanslatepressurewashingservicesLLC" target="_blank"><i class="fab fa-facebook-f"></i></a>
                             <a class="social-button instagram" href="https://www.instagram.com/naquinrickey/?igshid=MzRlODBiNWFlZA%3D%3D" target="_blank"><i class="fab fa-instagram"></i></a>
@@ -445,6 +458,28 @@
         </div>
     
     </div>
+
+
+
+</section>
+
+
+<section class ="free-quote-section">
+
+    <div class="quote-container">
+
+       <div class="quote-btn-container">
+        <a class="quote-btn" href="tel:5043527963">Call for a Free Estimate Today! <i class="fas fa-chevron-right"></i></a>
+
+       </div>
+
+
+
+
+
+    </div>
+
+
 
 
 
