moved the social icons up in about section

--- a/services.html
+++ b/services.html
@@ -101,9 +101,11 @@
     <div class="services-container">
 
       <div class="service-box">
+
         <div class="service-icon">
           <i class="fas fa-paint-brush"></i>
         </div>
+
         <div class="service-title">Power/Pressure/Soft Washing</div>
         <div class="service-desc">
           We can provide Power, Pressure, or Soft Washing to your Home or Business!
@@ -111,9 +113,11 @@
       </div>
 
       <div class="service-box">
+
         <div class="service-icon">
           <i class="fas fa-code"></i>
         </div>
+
         <div class="service-title">Residential house Washing</div>
         <div class="service-desc">
           We can clean your Roof, Windows(interior and exterior), Rooftop Skylight, also clean your gutters!
@@ -121,9 +125,11 @@
       </div>
 
       <div class="service-box">
+
         <div class="service-icon">
           <i class="fas fa-brush"></i>
         </div>
+
         <div class="service-title">Concrete Cleaning</div>
         <div class="service-desc">
           We can clean your Conrete Driveway, sidewalk, or parking lot from your Home or Business!
@@ -131,19 +137,25 @@
       </div>
 
       <div class="service-box">
+
         <div class="service-icon">
-          <i class="fas fa-brush"></i>
+          <img class="service-img" src=""></img>
         </div>
+
+
         <div class="service-title">Pool Deck Cleaning</div>
         <div class="service-desc">
           WE can get your deck cleaned up to enjoy all Summer Long!
         </div>
       </div>
 
+
       <div class="service-box">
+
         <div class="service-icon">
           <i class="fas fa-brush"></i>
         </div>
+
         <div class="service-title">Fence Washing</div>
         <div class="service-desc">
           We can get your fence looking like new again!
@@ -151,9 +163,11 @@
       </div>
 
       <div class="service-box">
+
         <div class="service-icon">
           <i class="fas fa-brush"></i>
         </div>
+
         <div class="service-title">Oil Stain Removal</div>
         <div class="service-desc">
           We can get that ugly oil stain washed away!
@@ -161,9 +175,11 @@
       </div>
 
       <div class="service-box">
+
         <div class="service-icon">
           <i class="fas fa-object-ungroup"></i>
         </div>
+
         <div class="service-title">Dumpster Cleaning</div>
         <div class="service-desc">
          We can get your dumpster and Dumpster pad cleaned up for you!
