added images to service page

--- a/services.html
+++ b/services.html
@@ -103,7 +103,7 @@
       <div class="service-box">
 
         <div class="service-icon">
-          <i class="fas fa-paint-brush"></i>
+          <img class="service-img" src="img\siding-after.jpg"></img>
         </div>
 
         <div class="service-title">Power/Pressure/Soft Washing</div>
@@ -112,10 +112,11 @@
         </div>
       </div>
 
+
       <div class="service-box">
 
         <div class="service-icon">
-          <i class="fas fa-code"></i>
+          <img class="service-img" src="img\house.jpg"></img>
         </div>
 
         <div class="service-title">Residential house Washing</div>
@@ -127,7 +128,21 @@
       <div class="service-box">
 
         <div class="service-icon">
-          <i class="fas fa-brush"></i>
+          <img class="service-img" src="img\gasstation.jpg"></img>
+        </div>
+
+        <div class="service-title">Commercial Cleaning</div>
+        <div class="service-desc">
+          We can clean your Roof, Windows(interior and exterior), Rooftop Skylight, also clean your gutters!
+        </div>
+      </div>
+
+
+
+      <div class="service-box">
+
+        <div class="service-icon">
+          <img class="service-img" src="img\driveway-after.jpg"></img>
         </div>
 
         <div class="service-title">Concrete Cleaning</div>
@@ -153,7 +168,7 @@
       <div class="service-box">
 
         <div class="service-icon">
-          <i class="fas fa-brush"></i>
+          <img class="service-img" src="img\fence-after.jpg"></img>
         </div>
 
         <div class="service-title">Fence Washing</div>
@@ -165,24 +180,12 @@
       <div class="service-box">
 
         <div class="service-icon">
-          <i class="fas fa-brush"></i>
+          <img class="service-img" src="img\oilstain.png"></img>
         </div>
 
         <div class="service-title">Oil Stain Removal</div>
         <div class="service-desc">
           We can get that ugly oil stain washed away!
-        </div>
-      </div>
-
-      <div class="service-box">
-
-        <div class="service-icon">
-          <i class="fas fa-object-ungroup"></i>
-        </div>
-
-        <div class="service-title">Dumpster Cleaning</div>
-        <div class="service-desc">
-         We can get your dumpster and Dumpster pad cleaned up for you!
         </div>
       </div>
 
@@ -194,11 +197,34 @@
 
 
 
+</section>
+
+
+<section class ="free-quote-section">
+
+    <div class="quote-container">
+
+       <div class="quote-btn-container">
+        <a class="quote-btn" href="tel:5043527963">Call for a Free Estimate Today! <i class="fas fa-chevron-right"></i></a>
+
+       </div>
 
 
 
 
-</div>
+
+    </div>
+
+
+
+
+
+</section>
+
+
+
+
+
 
 
 <footer class="footer-section">
