sizing done for desktop view

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             
                     <h1>About Us</h1>
 
-                        <p><i class="fa fa-check fa-lg pr-10"></i> Clean slate Pressure Washing LLC is located in South Louisiana and specializes in cleaning up your property. At Clean Slate you will receive a quality experience. We at Clean Slate take care of all your power washing needs including house, deck, patio, soft wash roof and sidewalks. Clean Slate will make you proud to call your house a home.
+                        <p> Clean slate Pressure Washing LLC is located in South Louisiana and specializes in cleaning up your property. At Clean Slate you will receive a quality experience. We at Clean Slate take care of all your power washing needs including house, deck, patio, soft wash roof and sidewalks. Clean Slate will make you proud to call your house a home.
 
 
                             <div class="rounded-social-buttons">
