--- a/services.html
+++ b/services.html
@@ -121,7 +121,7 @@
 
         <div class="service-title">Residential house Washing</div>
         <div class="service-desc">
-          We can clean your Roof, Windows(interior and exterior), Rooftop Skylight, also clean your gutters!
+          Clean your Roof, Windows(interior and exterior), Rooftop Skylight, also clean your gutters!
         </div>
       </div>
 
