sizing fixed for media services page

--- a/services.html
+++ b/services.html
@@ -93,7 +93,7 @@
 
 <div class="services-section">
   <div class="inner-width">
-    <h7 class="section-title">Our Services</h7>
+    <h7 class="section-title">Our Services</h7><br><h8>tap image below to zoom</h8>
     <div class="border"></div>
 
 
