--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
             <div class="container">
             
                     <h1>About Us</h1>
+                    <div class="border"></div>
 
                         <p> Clean slate Pressure Washing LLC is located in South Louisiana and specializes in cleaning up your property. At Clean Slate you will receive a quality experience. We at Clean Slate take care of all your power washing needs including house, deck, patio, soft wash roof and sidewalks. Clean Slate will make you proud to call your house a home.
 
@@ -206,6 +207,7 @@
             <!--Title for the Services section is below-->
 
                 <h3>Our Main Services</h3>
+                <div class="border"></div>
                
 
             </div>
