--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     <h1>About Us</h1>
                     <div class="border"></div>
 
-                        <p> Clean slate Pressure Washing LLC is located in South Louisiana and specializes in cleaning up your property. At Clean Slate you will receive a quality experience. We at Clean Slate take care of all your power washing needs including house, deck, patio, soft wash roof and sidewalks. Clean Slate will make you proud to call your house a home.
+                        <p> Clean slate Pressure Washing LLC is located in South Louisiana and specializes in cleaning up your property. At Clean Slate you will receive a quality experience. We at Clean Slate take care of all your Power and Soft washing needs including house, deck, patio, soft wash roof and sidewalks. Clean Slate will make you proud to call your house a home.
 
 
                             <div class="rounded-social-buttons">
@@ -448,8 +448,8 @@
             <div class="gallery-item">
                 <label>
                     <input class="image-toggler" type="checkbox">
-                    <img class="thumbnail" src="img\parkinglot-before.jpg">
-                    <img class="full" src="img\parkinglot-after.jpg" loading="lazy">
+                    <img class="thumbnail" src="img\parkinglot-after.jpg">
+                    <img class="full" src="img\parkinglot-before.jpg" loading="lazy">
                   </label>
             </div>
     
