colors changes throughout site

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
         <section id="banner">
             <div class="banner-image">
-         <img src="img\cleanslatelogo_Scaled500px.png"/>
+         <img src="img\cleanslateLSU.png"/>
         </div>
 
 
@@ -226,7 +226,7 @@
               <div class='service-item'>
                 <span class="fa-stack fa-2x">
                     <!--Below is the Font Awesome imported icon and the Css for the colored ring around it-->
-                  <i class="fa fa-circle-thin fa-stack-2x" style='color:#74ebd5'></i>
+                  <i class="fa fa-circle-thin fa-stack-2x" style='color:#Bf9553'></i>
                   <i class="fas fa-home fa-stack-1x"></i>
                 </span>
 
@@ -243,7 +243,7 @@
               <div class='service-item'>
                 <span class="fa-stack fa-2x">
                      <!--Below is the Font Awesome imported icon and the Css for the colored ring around it-->
-                  <i class="fa fa-circle-thin fa-stack-2x" style='color:#74ebd5'></i>
+                  <i class="fa fa-circle-thin fa-stack-2x" style='color:#Bf9553'></i>
                   <i class="fas fa-warehouse fa-stack-1x"></i>
                 </span>
 
@@ -259,7 +259,7 @@
               <div class='service-item'>
                 <span class="fa-stack fa-2x">
                     <!--Below is the Font Awesome imported icon and the Css for the colored ring around it-->
-                  <i class="fa fa-circle-thin fa-stack-2x" style='color:#74ebd5'></i>
+                  <i class="fa fa-circle-thin fa-stack-2x" style='color:#Bf9553'></i>
                   <i class="fas fa-bars fa-rotate-90  fa-stack-1x"></i>
                 </span>
 
@@ -272,7 +272,7 @@
               <div class='service-item'>
                 <span class="fa-stack fa-2x">
                     <!--Below is the Font Awesome imported icon and the Css for the colored ring around it-->
-                  <i class="fa fa-circle-thin fa-stack-2x" style='color:#74ebd5'></i>
+                  <i class="fa fa-circle-thin fa-stack-2x" style='color:#Bf9553'></i>
                   <i class="fas fa-road fa-stack-1x"></i>
                 </span>
 
