--- a/services.html
+++ b/services.html
@@ -160,7 +160,7 @@
 
         <div class="service-title">Pool Deck Cleaning</div>
         <div class="service-desc">
-          WE can get your deck cleaned up to enjoy all Summer Long!
+          We can get your deck cleaned up to enjoy all Summer Long!
         </div>
       </div>
 
