updated the tawk.to app

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     (function(){
     var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
     s1.async=true;
-    s1.src='https://embed.tawk.to/62f18d0b54f06e12d88d9b7c/1g9vott3k';
+    s1.src='https://embed.tawk.to/6523027e6fcfe87d54b7b886/1hc8c3ffv';
     s1.charset='UTF-8';
     s1.setAttribute('crossorigin','*');
     s0.parentNode.insertBefore(s1,s0);
@@ -226,7 +226,7 @@
               <div class='service-item'>
                 <span class="fa-stack fa-2x">
                     <!--Below is the Font Awesome imported icon and the Css for the colored ring around it-->
-                  <i class="fa fa-circle-thin fa-stack-2x" style='color:#Bf9553'></i>
+                  <i class="fa fa-circle-thin fa-stack-2x" style='color:# c'></i>
                   <i class="fas fa-home fa-stack-1x"></i>
                 </span>
 
