--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <title>Clean Slate Pressure Washing Services Website</title>
     <meta name = "viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Clean Slate Pressure Washing Services, Clean Slate Pressure Washing, Pressure Washing in St. Charles Area, Pressure Washing in New Orleans Area, Pressure Washing Near Me " />
-
-    <meta name="description" content="A website for Clean Slate Pressure Washing LLC" />
+    <meta name="description" content="A website for Clean Slate Pressure Washing LLC, a Pressure and Soft Wash Company located in South Lousiana" />
    
    
 
@@ -122,7 +121,7 @@
 
         <section id="banner">
             <div class="banner-image">
-         <img src="img\cleanslateLSU.png"/>
+         <img src="img\cleanslateLSU.png" alt="banner logo">
         </div>
 
 
@@ -226,7 +225,7 @@
               <div class='service-item'>
                 <span class="fa-stack fa-2x">
                     <!--Below is the Font Awesome imported icon and the Css for the colored ring around it-->
-                  <i class="fa fa-circle-thin fa-stack-2x" style='color:# c'></i>
+    <i class="fa fa-circle-thin fa-stack-2x" style='color:#Bf9553'></i>
                   <i class="fas fa-home fa-stack-1x"></i>
                 </span>
 
@@ -272,7 +271,7 @@
               <div class='service-item'>
                 <span class="fa-stack fa-2x">
                     <!--Below is the Font Awesome imported icon and the Css for the colored ring around it-->
-                  <i class="fa fa-circle-thin fa-stack-2x" style='color:#Bf9553'></i>
+                  <i class="fa fa-circle-thin fa-stack-2x" style ='color:#Bf9553'></i>
                   <i class="fas fa-road fa-stack-1x"></i>
                 </span>
 
