color and logo change

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
         <section id="banner">
             <div class="banner-image">
-         <img src="img\cleanslateLSU.png" alt="banner logo">
+         <img src="img\cleanslatelogo.png" alt="banner logo" >
         </div>
 
 
