fixed estimate button on service.html

--- a/services.html
+++ b/services.html
@@ -205,7 +205,7 @@
     <div class="quote-container">
 
        <div class="quote-btn-container">
-        <a class="quote-btn" href="tel:5043527963">Call for a Free Estimate Today! <i class="fas fa-chevron-right"></i></a>
+        <a class="quote-btn" href="tel:5043527963">Call for a Free Estimate Today! <i class="fas fa-phone"></i></a>
 
        </div>
 
