added gallery page

--- a/index.html
+++ b/index.html
@@ -85,6 +85,10 @@
                                 <a href="services.html">Services</a>
                             </li>
 
+                            <li>
+                                <a href="gallery.html">Gallery</a>
+                            </li>
+
                         </ul>    
                 
 
