added gallery page

--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
                                 <a href="services.html">Services</a>
                             </li>
 
+                            <li>
+                                <a href="services.html">Services</a>
+                            </li>
        
                         </ul>    
                 
