added image gallery

--- a/gallery.html
+++ b/gallery.html
@@ -12,6 +12,8 @@
 <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'>
 <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
 <link href="css/style.css" rel="stylesheet" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js">
 
 
 </head>
@@ -52,11 +54,11 @@
                   <a href="index.html">Home</a>
               </li>
 
-                <li class="active">
+                <li>
                   <a href="services.html">Services</a>
               </li>
 
-              <li>
+              <li class="active">
                 <a href="gallery.html">Gallery</a>
             </li>
 
@@ -90,111 +92,107 @@
 
 
 
+<h1>Responsive Image Gallery</h1><hr>
+<div id="gallery" class="container-fluid">  
+
+  <video class="vid" controls>
+    <source src="img\washing.mp4" type="video/mp4">
+    </source>
+  </video>
+
+  <img src="img\cslogobeforeandafter.jpg" class="img-responsive">
 
 
-<div class="services-section">
-  <div class="inner-width">
-    <h7 class="section-title">Our Services</h7><br><h8>tap image below to zoom</h8>
-    <div class="border"></div>
+  <label>
+
+    <input class="image-toggler" type="checkbox">
+    <img class="thumbnail" src="img\walkway1.jpg">
+    <img class="full" src="img\walkway2.jpg" loading="lazy">
+    <h6>click above</h6>
+  </label>
 
 
+  <video class="vid" controls>
+    <source src="img\Tiktokvid1.mp4" type="video/mp4">
+    </source>
+  </video>
 
-    <div class="services-container">
-
-      <div class="service-box">
-
-        <div class="service-icon">
-          <img class="service-img" src="img\siding-after.jpg"></img>
-        </div>
-
-        <div class="service-title">Power/Pressure/Soft Washing</div>
-        <div class="service-desc">
-          We can provide Power, Pressure, or Soft Washing to your Home or Business!
-        </div>
-      </div>
+  <img src="img\after1.jpg" class="img-responsive">
 
 
-      <div class="service-box">
-
-        <div class="service-icon">
-          <img class="service-img" src="img\house.jpg"></img>
-        </div>
-
-        <div class="service-title">Residential house Washing</div>
-        <div class="service-desc">
-          Clean your Roof, Windows(interior and exterior), Rooftop Skylight, also clean your gutters!
-        </div>
-      </div>
-
-      <div class="service-box">
-
-        <div class="service-icon">
-          <img class="service-img" src="img\gasstation.jpg"></img>
-        </div>
-
-        <div class="service-title">Commercial Cleaning</div>
-        <div class="service-desc">
-          We can clean your Roof, Windows(interior and exterior), Rooftop Skylight, also clean your gutters!
-        </div>
-      </div>
+  <label>
+    <input class="image-toggler" type="checkbox">
+    <img class="thumbnail" src="img\driveway1.jpg">
+    <img class="full" src="img\driveway2.jpg" loading="lazy">
+    <h6>click above</h6>
+  </label>
 
 
-
-      <div class="service-box">
-
-        <div class="service-icon">
-          <img class="service-img" src="img\driveway-after.jpg"></img>
-        </div>
-
-        <div class="service-title">Concrete Cleaning</div>
-        <div class="service-desc">
-          We can clean your Conrete Driveway, sidewalk, or parking lot from your Home or Business!
-        </div>
-      </div>
-
-      <div class="service-box">
-
-        <div class="service-icon">
-          <img class="service-img" src="img\pooldeck.jpg"></img>
-        </div>
+<img src="img\before-and-after3.jpg" class="img-responsive">
 
 
-        <div class="service-title">Pool Deck Cleaning</div>
-        <div class="service-desc">
-          We can get your deck cleaned up to enjoy all Summer Long!
-        </div>
-      </div>
+  <img src="img\before-and-after5.jpg" class="img-responsive">
+
+  <img src="img\before-and-after2.jpg" class="img-responsive">
 
 
-      <div class="service-box">
+  <label>
+    <input class="image-toggler" type="checkbox">
+    <img class="thumbnail" src="img\driveway-before.jpg">
+    <img class="full" src="img\driveway-after.jpg" loading="lazy">
+    <h6>click above</h6>
+  </label>
 
-        <div class="service-icon">
-          <img class="service-img" src="img\fence-after.jpg"></img>
-        </div>
 
-        <div class="service-title">Fence Washing</div>
-        <div class="service-desc">
-          We can get your fence looking like new again!
-        </div>
-      </div>
+  <img src="img\gaststationafter.jpg" class="img-responsive">
 
-      <div class="service-box">
 
-        <div class="service-icon">
-          <img class="service-img" src="img\oilstain.png"></img>
-        </div>
+  <video class="vid" controls>
+    <source src="img\Tiktokvid2.mp4" type="video/mp4">
+    </source>
+  </video>
 
-        <div class="service-title">Oil Stain Removal</div>
-        <div class="service-desc">
-          We can get that ugly oil stain washed away!
-        </div>
-      </div>
 
-      </div>
-    </div>
-  </div>
+  <img src="img\afterwalkway.jpg" class="img-responsive">
+
+  <video class="vid" controls>
+    <source src="img\Download (2).mp4" type="video/mp4">
+    </source>
+  </video>
+
+<img src="img\cslogobeforeandafter2.jpg" class="img-responsive">
+
+
+<label>
+  <label>
+    <input class="image-toggler" type="checkbox">
+    <img class="thumbnail" src="img\anotherfrontporch-before.jpg">
+    <img class="full" src="img\anotherfrontporch-after.jpg" loading="lazy">
+    <h6>Click Above</h6>
+  </label>
+
+<img src="img\siding-after.jpg" class="img-responsive">
+
+<label>
+  <input class="image-toggler" type="checkbox">
+  <img class="thumbnail" src="img\anotherfrontporch-before.jpg">
+  <img class="full" src="img\anotherfrontporch-after.jpg" loading="lazy">
+  <h6>Click Above</h6>
+</label>
+
 </div>
 
+<div id="myModal" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-body">
+      </div>
+    </div>
+
+  </div>
+</div>
 
 
 
