--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                             </li>
 
                             <li>
-                                <a href="services.html">Services</a>
+                                <a href="gallery.html">Gallery</a>
                             </li>
        
                         </ul>    
