changed header on gallery page

--- a/gallery.html
+++ b/gallery.html
@@ -92,7 +92,7 @@
 
 
 
-<h1>Responsive Image Gallery</h1><hr>
+<h1>Image Gallery</h1><hr>
 <div id="gallery" class="container-fluid">  
 
   <video class="vid" controls>
