--- a/gallery.html
+++ b/gallery.html
@@ -108,7 +108,7 @@
     <input class="image-toggler" type="checkbox">
     <img class="thumbnail" src="img\walkway1.jpg">
     <img class="full" src="img\walkway2.jpg" loading="lazy">
-    <h6>click above</h6>
+    <h6>Click Above</h6>
   </label>
 
 
@@ -124,7 +124,7 @@
     <input class="image-toggler" type="checkbox">
     <img class="thumbnail" src="img\driveway1.jpg">
     <img class="full" src="img\driveway2.jpg" loading="lazy">
-    <h6>click above</h6>
+    <h6>Click Above</h6>
   </label>
 
 
@@ -140,7 +140,7 @@
     <input class="image-toggler" type="checkbox">
     <img class="thumbnail" src="img\driveway-before.jpg">
     <img class="full" src="img\driveway-after.jpg" loading="lazy">
-    <h6>click above</h6>
+    <h6>Click Above</h6>
   </label>
 
 
