small adjust to heading on gallery page

--- a/gallery.html
+++ b/gallery.html
@@ -91,8 +91,9 @@
 <!-- end header -->
 
 
-
-<h1>Image Gallery</h1><hr>
+<div class="gallery-heading">
+<h8>Image Gallery</h8><hr>
+</div>
 <div id="gallery" class="container-fluid">  
 
   <video class="vid" controls>
