update to some heading tags

--- a/gallery.html
+++ b/gallery.html
@@ -94,6 +94,8 @@
 <div class="gallery-heading">
 <h8>Image Gallery</h8><hr>
 </div>
+
+
 <div id="gallery" class="container-fluid">  
 
   <video class="vid" controls>
@@ -295,6 +297,7 @@
                <a class="social-button instagram" href="https://www.instagram.com/naquinrickey/?igshid=MzRlODBiNWFlZA%3D%3D" target="_blank"><i class="fab fa-instagram"></i></a>
                <a class="social-button tiktok" href="https://www.tiktok.com/@rnaquin1984?lang=en&is_from_webapp=1&sender_device=mobile&sender_web_id=7238679858033706542" target="_blank"><i class="fab fa-tiktok"></i></a>
                <a class="social-button yelp" href="https://www.yelp.com/" target="_blank"><i class="fab fa-yelp"></i></a>
+                  <a class="social-button linkedin" href="http://www.linkedin.com/in/rickey-naquin-719008297" target="_blank"><i class="fab fa-linkedin"></i></a>
               
            </div>
        </div>
